CMineCore/src/main/kotlin/lib/lang/TesteLangParser.java
package lib.lang;// Generated from TesteLang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TesteLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T_CODE_S=1, T_CODE_E=2, T_CV_TYPE=3, T_OP_UN=4, T_OP_MATH=5, T_OP_REL=6, 
		T_OP_ATR=7, T_OP_LOG=8, T_OP_NOT=9, T_COND_IF=10, T_COND_ELSE=11, T_REP_FOR=12, 
		T_REP_WHILE=13, T_REP_CONT=14, T_REP_BREAK=15, T_EX_TRY=16, T_EX_CATCH=17, 
		T_FUNC_DEF=18, T_FUNC_RET=19, T_SYS_VAR=20, T_SYS_FUNC=21, T_END_C=22, 
		T_COMMA=23, T_DOT=24, T_PAR_OPEN=25, T_PAR_CLOSE=26, T_BRAC_OPEN=27, T_BRAC_CLOSE=28, 
		T_VAL_BOOL=29, T_ID_VAR=30, T_ID_CONST=31, T_ID_FUNC=32, T_VAL_INT=33, 
		T_VAL_DOUBLE=34, T_VAL_STRING=35, NEW_LINE=36, SPACES=37, T_COMMENT=38;
	public static final int
		RULE_program = 0, RULE_prog = 1, RULE_expr = 2, RULE_exp_try = 3, RULE_exp_req_params = 4, 
		RULE_exp_req_param = 5, RULE_exp_params = 6, RULE_exp_param = 7, RULE_exp_return = 8, 
		RULE_exp_func = 9, RULE_exp_def_func = 10, RULE_exp_func_called = 11, 
		RULE_exp_stored_value = 12, RULE_exp_cond = 13, RULE_exp_cond_assign = 14, 
		RULE_exp_unary = 15, RULE_exp_loop = 16, RULE_exp_loop_assign = 17, RULE_exp_number = 18, 
		RULE_exp_arith_paren = 19, RULE_exp_arith = 20, RULE_exp_boolean = 21, 
		RULE_exp_boolean_compared = 22, RULE_exp_comparable = 23, RULE_exp_value = 24, 
		RULE_exp_assign = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "prog", "expr", "exp_try", "exp_req_params", "exp_req_param", 
			"exp_params", "exp_param", "exp_return", "exp_func", "exp_def_func", 
			"exp_func_called", "exp_stored_value", "exp_cond", "exp_cond_assign", 
			"exp_unary", "exp_loop", "exp_loop_assign", "exp_number", "exp_arith_paren", 
			"exp_arith", "exp_boolean", "exp_boolean_compared", "exp_comparable", 
			"exp_value", "exp_assign"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'IFSULDEMINAS'", "'MUZ'", null, null, null, null, "'='", null, 
			"'!'", "'check'", "'checked'", "'task'", "'journey'", "'respawn'", "'quit'", 
			"'play'", "'crash'", "'quest'", "'loot'", null, null, "';'", "','", "'.'", 
			"'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "T_CODE_S", "T_CODE_E", "T_CV_TYPE", "T_OP_UN", "T_OP_MATH", "T_OP_REL", 
			"T_OP_ATR", "T_OP_LOG", "T_OP_NOT", "T_COND_IF", "T_COND_ELSE", "T_REP_FOR", 
			"T_REP_WHILE", "T_REP_CONT", "T_REP_BREAK", "T_EX_TRY", "T_EX_CATCH", 
			"T_FUNC_DEF", "T_FUNC_RET", "T_SYS_VAR", "T_SYS_FUNC", "T_END_C", "T_COMMA", 
			"T_DOT", "T_PAR_OPEN", "T_PAR_CLOSE", "T_BRAC_OPEN", "T_BRAC_CLOSE", 
			"T_VAL_BOOL", "T_ID_VAR", "T_ID_CONST", "T_ID_FUNC", "T_VAL_INT", "T_VAL_DOUBLE", 
			"T_VAL_STRING", "NEW_LINE", "SPACES", "T_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TesteLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TesteLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode T_CODE_S() { return getToken(TesteLangParser.T_CODE_S, 0); }
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public TerminalNode T_CODE_E() { return getToken(TesteLangParser.T_CODE_E, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T_CODE_S);
			setState(53);
			prog();
			setState(54);
			match(T_CODE_E);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 68220171800L) != 0)) {
				{
				{
				setState(56);
				expr();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Exp_assignContext exp_assign() {
			return getRuleContext(Exp_assignContext.class,0);
		}
		public TerminalNode T_END_C() { return getToken(TesteLangParser.T_END_C, 0); }
		public Exp_valueContext exp_value() {
			return getRuleContext(Exp_valueContext.class,0);
		}
		public Exp_arithContext exp_arith() {
			return getRuleContext(Exp_arithContext.class,0);
		}
		public Exp_returnContext exp_return() {
			return getRuleContext(Exp_returnContext.class,0);
		}
		public Exp_loopContext exp_loop() {
			return getRuleContext(Exp_loopContext.class,0);
		}
		public Exp_condContext exp_cond() {
			return getRuleContext(Exp_condContext.class,0);
		}
		public Exp_tryContext exp_try() {
			return getRuleContext(Exp_tryContext.class,0);
		}
		public Exp_funcContext exp_func() {
			return getRuleContext(Exp_funcContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(62);
				exp_assign();
				setState(63);
				match(T_END_C);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(65);
				exp_value();
				setState(66);
				match(T_END_C);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(68);
				exp_arith();
				setState(69);
				match(T_END_C);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(71);
				exp_return();
				setState(72);
				match(T_END_C);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(74);
				exp_loop();
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				{
				setState(75);
				exp_cond();
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				{
				setState(76);
				exp_try();
				}
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				{
				setState(77);
				exp_func();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_tryContext extends ParserRuleContext {
		public TerminalNode T_EX_TRY() { return getToken(TesteLangParser.T_EX_TRY, 0); }
		public List<TerminalNode> T_BRAC_OPEN() { return getTokens(TesteLangParser.T_BRAC_OPEN); }
		public TerminalNode T_BRAC_OPEN(int i) {
			return getToken(TesteLangParser.T_BRAC_OPEN, i);
		}
		public List<TerminalNode> T_BRAC_CLOSE() { return getTokens(TesteLangParser.T_BRAC_CLOSE); }
		public TerminalNode T_BRAC_CLOSE(int i) {
			return getToken(TesteLangParser.T_BRAC_CLOSE, i);
		}
		public TerminalNode T_EX_CATCH() { return getToken(TesteLangParser.T_EX_CATCH, 0); }
		public TerminalNode T_PAR_OPEN() { return getToken(TesteLangParser.T_PAR_OPEN, 0); }
		public Exp_req_paramsContext exp_req_params() {
			return getRuleContext(Exp_req_paramsContext.class,0);
		}
		public TerminalNode T_PAR_CLOSE() { return getToken(TesteLangParser.T_PAR_CLOSE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Exp_tryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_try; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_try(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_try(this);
		}
	}

	public final Exp_tryContext exp_try() throws RecognitionException {
		Exp_tryContext _localctx = new Exp_tryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exp_try);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T_EX_TRY);
			setState(81);
			match(T_BRAC_OPEN);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 68220171800L) != 0)) {
				{
				{
				setState(82);
				expr();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(T_BRAC_CLOSE);
			setState(89);
			match(T_EX_CATCH);
			setState(90);
			match(T_PAR_OPEN);
			setState(91);
			exp_req_params();
			setState(92);
			match(T_PAR_CLOSE);
			setState(93);
			match(T_BRAC_OPEN);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 68220171800L) != 0)) {
				{
				{
				setState(94);
				expr();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(T_BRAC_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_req_paramsContext extends ParserRuleContext {
		public List<Exp_req_paramContext> exp_req_param() {
			return getRuleContexts(Exp_req_paramContext.class);
		}
		public Exp_req_paramContext exp_req_param(int i) {
			return getRuleContext(Exp_req_paramContext.class,i);
		}
		public List<TerminalNode> T_COMMA() { return getTokens(TesteLangParser.T_COMMA); }
		public TerminalNode T_COMMA(int i) {
			return getToken(TesteLangParser.T_COMMA, i);
		}
		public Exp_req_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_req_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_req_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_req_params(this);
		}
	}

	public final Exp_req_paramsContext exp_req_params() throws RecognitionException {
		Exp_req_paramsContext _localctx = new Exp_req_paramsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exp_req_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			exp_req_param();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_COMMA) {
				{
				{
				setState(103);
				match(T_COMMA);
				setState(104);
				exp_req_param();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_req_paramContext extends ParserRuleContext {
		public TerminalNode T_CV_TYPE() { return getToken(TesteLangParser.T_CV_TYPE, 0); }
		public TerminalNode T_ID_VAR() { return getToken(TesteLangParser.T_ID_VAR, 0); }
		public Exp_req_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_req_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_req_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_req_param(this);
		}
	}

	public final Exp_req_paramContext exp_req_param() throws RecognitionException {
		Exp_req_paramContext _localctx = new Exp_req_paramContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exp_req_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T_CV_TYPE);
			setState(111);
			match(T_ID_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_paramsContext extends ParserRuleContext {
		public List<Exp_paramContext> exp_param() {
			return getRuleContexts(Exp_paramContext.class);
		}
		public Exp_paramContext exp_param(int i) {
			return getRuleContext(Exp_paramContext.class,i);
		}
		public List<TerminalNode> T_COMMA() { return getTokens(TesteLangParser.T_COMMA); }
		public TerminalNode T_COMMA(int i) {
			return getToken(TesteLangParser.T_COMMA, i);
		}
		public Exp_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_params(this);
		}
	}

	public final Exp_paramsContext exp_params() throws RecognitionException {
		Exp_paramsContext _localctx = new Exp_paramsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exp_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			exp_param();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_COMMA) {
				{
				{
				setState(114);
				match(T_COMMA);
				setState(115);
				exp_param();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_paramContext extends ParserRuleContext {
		public Exp_valueContext exp_value() {
			return getRuleContext(Exp_valueContext.class,0);
		}
		public Exp_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_param(this);
		}
	}

	public final Exp_paramContext exp_param() throws RecognitionException {
		Exp_paramContext _localctx = new Exp_paramContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exp_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			exp_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_returnContext extends ParserRuleContext {
		public TerminalNode T_FUNC_RET() { return getToken(TesteLangParser.T_FUNC_RET, 0); }
		public Exp_valueContext exp_value() {
			return getRuleContext(Exp_valueContext.class,0);
		}
		public Exp_returnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_return(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_return(this);
		}
	}

	public final Exp_returnContext exp_return() throws RecognitionException {
		Exp_returnContext _localctx = new Exp_returnContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_exp_return);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T_FUNC_RET);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 68219306512L) != 0)) {
				{
				setState(124);
				exp_value();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_funcContext extends ParserRuleContext {
		public Exp_def_funcContext exp_def_func() {
			return getRuleContext(Exp_def_funcContext.class,0);
		}
		public TerminalNode T_BRAC_OPEN() { return getToken(TesteLangParser.T_BRAC_OPEN, 0); }
		public TerminalNode T_BRAC_CLOSE() { return getToken(TesteLangParser.T_BRAC_CLOSE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Exp_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_func(this);
		}
	}

	public final Exp_funcContext exp_func() throws RecognitionException {
		Exp_funcContext _localctx = new Exp_funcContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_exp_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			exp_def_func();
			setState(128);
			match(T_BRAC_OPEN);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 68220171800L) != 0)) {
				{
				{
				setState(129);
				expr();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(T_BRAC_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_def_funcContext extends ParserRuleContext {
		public TerminalNode T_FUNC_DEF() { return getToken(TesteLangParser.T_FUNC_DEF, 0); }
		public TerminalNode T_ID_FUNC() { return getToken(TesteLangParser.T_ID_FUNC, 0); }
		public TerminalNode T_PAR_OPEN() { return getToken(TesteLangParser.T_PAR_OPEN, 0); }
		public TerminalNode T_PAR_CLOSE() { return getToken(TesteLangParser.T_PAR_CLOSE, 0); }
		public Exp_req_paramsContext exp_req_params() {
			return getRuleContext(Exp_req_paramsContext.class,0);
		}
		public Exp_def_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_def_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).enterExp_def_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TesteLangListener ) ((TesteLangListener)listener).exitExp_def_func(this);
		}
	}

	public final Exp_def_funcContext exp_def_func() throws RecognitionException {
		Exp_def_funcContext _localctx = new Exp_def_funcContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_exp_def_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T_FUNC_DEF);
			setState(138);
			match(T_ID_FUNC);
			setState(139);
			match(T_PAR_OPEN);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T_CV_TYPE) {
				{
				setState(140);
				exp_req_params();
				}
			}
